--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gawzony App">
     <meta itemprop="description" content="Ana Smsm ... ttgwzeny :'D ?">
-    <meta itemprop="image" content="http://gawzony.github.io/assets/img/logo.jpg">
+    <meta itemprop="image" content="https://gawzony.github.io/assets/img/logo.jpg">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="product">
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Gawzony App">
     <meta name="twitter:description" content="Ana Smsm ... ttgwzeny :'D ?">
     <meta name="twitter:creator" content="@Microsmsm">
-    <meta name="twitter:image" content="http://gawzony.github.io/assets/img/logo.jpg">
+    <meta name="twitter:image" content="https://gawzony.github.io/assets/img/logo.jpg">
     <meta name="twitter:data1" content="Android">
     <meta name="twitter:label1" content="Download">
     <meta name="twitter:data2" content="IOS">
@@ -30,8 +30,8 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Gawzony App" />
     <meta property="og:type" content="product" />
-    <meta property="og:url" content="http://gawzony.github.io/" />
-    <meta property="og:image" content="http://gawzony.github.io/assets/img/logo.jpg" />
+    <meta property="og:url" content="https://gawzony.github.io/" />
+    <meta property="og:image" content="https://gawzony.github.io/assets/img/logo.jpg" />
     <meta property="og:description" content="Ana Smsm ... ttgwzeny :'D ?" />
     <meta property="og:site_name" content="Gawzony App" />
     <meta property="og:price:amount" content="Dwonload" />
