--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
 
     <div class="container">
-        <h2 class="text">انا سمسم ... جوزوني بقى 😍 </h2>
+        <h2 class="text">انا سمسم ... بحبك يا هديل 😍 </h2>
         <p class="text-center"><a class="mail" href="mailto:ttgwzeny@gmail.com"> تتجوزيني 😘؟</a></p>
     </div>
 
